# bnomial-cli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: continuous_integration.yml  cross_compile.yml
src/: lib.rs  main.rs
