[package]
name = "bnomial-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11", features=["blocking", "json"]}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
requestty = "0.4.1"
termimad = "0.20"
crossterm = "0.23.2"
