[package]
name = "bnomial-cli"
version = "0.1.0"
edition = "2021"
authors = ["swanandx"]
description = "Get a fun machine learning question everyday in your terminal!"
readme = "README.md"
repository = "https://github.com/swanandx/bnomial-cli/"
homepage = "https://github.com/swanandx/bnomial-cli/"
license = "MIT"
keywords = ["machine-learning"]
categories = ["accessibility", "command-line-utilities", "science"]
exclude = [".*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11", features=["blocking", "json"]}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
requestty = "0.4.1"
termimad = "0.20"
crossterm = "0.23.2"
